--- a/src/index.css
+++ b/src/index.css
@@ -6,13 +6,17 @@
 
 * {
   font-family: 'Ping Regular', sans-serif;
+ }
+ 
+ body{
+   margin : 1rem;
 }
 
 img{
   width: auto;
-  height: 300px;  
-  margin: 10px;
-  padding: 10px;
+  height: 400px;  
+  margin: 0.4rem;
+  padding: 0.3rem;
 }
 .main-title {
   font-weight: bold;
@@ -25,17 +29,32 @@ img{
   text-align: center;
 }
 
+.container{
+  display: flex;
+  flex-direction: column;
+  margin : 0rem;
+}
+.title{
+  font-weight: bold;
+  font-size: 0.9em;
+  line-height: 3;
+  color: #FFFFFF;
+  background-color:var(--main-bg-color);
+  text-transform: uppercase;
+  letter-spacing: 1.67px;
+  text-align: center;
+}
+
+
 .header {
   background-color: var(--bg-color);
   display: flex;
   justify-content: space-around;
-
-  margin: 10px;
-  padding: 10px;
+  padding: 1rem;
 }
 
 .header div {
-  margin: 5px;
+  margin: 50px;
 }
 
 .header .menu {
@@ -59,9 +78,8 @@ img{
   display: flex;
   flex-flow: column;
   padding: 5px;
-  max-width: 300px;
   margin: auto;
-  background-color: #f3edd1;
+  background-color: white;
 }
 
 .schilders-container {
